# 4thCourceWork

./: App.cpp  App.h  Base.cpp  Base.h  CMakeLists.txt  cl_2.cpp  cl_2.h  cl_3.cpp  cl_3.h  cl_4.cpp  cl_4.h  cl_5.cpp  cl_5.h  cl_6.cpp  cl_6.h  main.cpp
