cmake_minimum_required(VERSION 3.28)
project(untitled1)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled1 main.cpp
        App.cpp
        App.h
        Base.cpp
        Base.h
        cl_2.cpp
        cl_2.h
        cl_3.cpp
        cl_3.h
        cl_4.cpp
        cl_4.h
        cl_5.cpp
        cl_5.h
        cl_6.cpp
        cl_6.h)
